Closed Bug 1198128 Opened 8 years ago Closed 8 years ago

Fix -Wshadow warnings in widget/gtk

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This patch fixes -Wshadow warnings in widget/gtk/*.c* source files, but we can't enable FAIL_ON_WARNINGS because there still -Wshadow warnings from chromium ipc headers. :(

widget/gtk/gtk3drawing.c:2727:30: warning: declaration of 'style' shadows a previous local [-Wshadow]

widget/gtk/nsClipboard.cpp:572:31: warning: declaration of 'item' shadows a previous local [-Wshadow]
widget/gtk/nsClipboard.cpp:573:18: warning: declaration of 'len' shadows a previous local [-Wshadow]

widget/gtk/nsDragService.cpp:787:38: error: declaration of 'rv' shadows a previous local [-Wshadow]
widget/gtk/nsWindow.cpp:2330:22: warning: declaration of 'rect' shadows a previous local [-Wshadow]
widget/gtk/nsWindow.cpp:2335:22: warning: declaration of 'rect' shadows a previous local [-Wshadow]
Attachment #8652177 - Flags: review?(karlt)
Comment on attachment 8652177 [details] [diff] [review]
fix-gtk-Wshadow-warnings.patch

Usually I prefer variables to have minimum scope, but declarations are awkward in C.
Attachment #8652177 - Flags: review?(karlt) → review+
https://hg.mozilla.org/mozilla-central/rev/d799977fb409
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.