Bug 1198128 - Fix -Wshadow warnings in widget/gtk. r=karlt